<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="E_StationInOutState" Id="{d40b03a9-86ae-44df-9137-b3f87a840a67}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_StationInOutState :
(
	Idle := 0,
	Check,
	StartMoveOut,
	WaitMoveOut,
	StartMoveIn,
	WaitMoveIn
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>