<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="ST_StationControlData" Id="{3d251fc9-785b-4253-b8d8-b37e4a744e7c}">
    <Declaration><![CDATA[TYPE ST_StationControlData :
STRUCT
	nTicket			: UINT;
	nTicketSize		: UINT;
	nCarrierID		: UINT;
	nPriority		: UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>